--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head><title>Stock Retriever</title></head>
+<head>
+    <title>Stock Retriever</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <style>
+        #loading {
+            display: none;
+            font-size: 1rem;
+            color: #333;
+            margin-top: 1rem;
+        }
+    </style>
+</head>
+
 <body>
     <h1>Enter Stock Ticker</h1>
     <form method="POST">
@@ -8,5 +20,14 @@
         {{ form.ticker.label }} {{ form.ticker() }}
         {{ form.submit() }}
     </form>
+
+    <p id="loading">Please wait while your stock data is fetched...</p>
+
+    <script>
+        document.querySelector("form").addEventListener("submit", function () {
+            document.getElementById("loading").style.display = "block";
+        });
+    </script>
+
 </body>
 </html>
